--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -119,3 +119,27 @@ h1 {
 .info-item b {
   font-weight: bold;
 }
+.btn-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 10px;
+  z-index: 333;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: rgb(202, 207, 207);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  color: rgb(43, 41, 41);
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.btn-to-top--visible {
+  opacity: 1;
+  visibility: visible;
+}
